[package]
name = "http-whatever"
description = "A threasafe snafu::Whatever for HTTP errors"
version = "0.1.0"
edition = "2021"
authors = ["Martin Bartlett"]
license = "Apache-2.0"
homepage = "https://github.com/bassmanitram/http-whatever"
repository = "https://github.com/bassmanitram/http-whatever"
readme = "README.md"
keywords = ["snafu", "whatever", "http"]
categories = ["web-programming::http-server"]

[dependencies]
http = "0.2.10"
snafu = "0.7.5"
