[package]
name = "http-whatever"
description = "A threadsafe snafu::Whatever for HTTP errors"
version = "0.3.0"
edition = "2021"
authors = ["Martin Bartlett"]
license = "Apache-2.0"
homepage = "https://github.com/bassmanitram/http-whatever"
repository = "https://github.com/bassmanitram/http-whatever"
documentation = "https://docs.rs/http-whatever"
readme = "README.md"
keywords = ["snafu", "whatever", "http"]
categories = ["web-programming::http-server"]

[dependencies]
http = "1"
snafu = "0.8"
